# pattern-grammar

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml  requirements.txt  setup.py
examples/: ISO_8601_datetime_validation.py  check_examples.py  ipv6_validation.py  json_parser.py  math_expressions.py  rfc3986_url.py  semver_validation.py  uk_postcode_validation.py  url_validation.py
pattern_grammar/: __init__.py  analyzer.py  lark_converter.py  parser.py  regex_converter.py
