# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pattern-grammar"
version = "0.1.0"
description = "Читаемые паттерны вместо регулярных выражений"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "lark>=1.1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pattern_grammar*"]
